--- a/zadanie-start.html
+++ b/zadanie-start.html
@@ -30,7 +30,7 @@
 
             if (size >= window.innerheight / 2) {
                 grow = false;
-            } else if (size <= 0) { // notice that both "if statements" reverse value
+            } else if (size <= 0) { // notice that both "if" and "else if" reverse value
                 grow = true;
             }
 
