--- a/13. Projekt 11 - zegar i odliczanie do końca świata/3.1 Projekt11-ZadanieDlaCiebie-Stoper-start.zip/index.html
+++ b/13. Projekt 11 - zegar i odliczanie do końca świata/3.1 Projekt11-ZadanieDlaCiebie-Stoper-start.zip/index.html
@@ -31,22 +31,26 @@
 </head>
 
 <body>
+
     <button class="main">Start</button>
+
     <button class="reset">Reset</button>
+
     <div class="time">
+
         <p>Czas od startu:</p>
         <div>---</div>
     </div>
-    <h1></h1>
+    <h1>seconds</h1>
+    <h2>milisecons</h2>
 
 
 
 
 
 
-    <div id="result"></div>
 
-    <br><br>
+    <br><br><br><br><br><br>
     <button id="submit">submit</button>
     <button id="testo">stop</button>
 
