--- a/13. Projekt 11 - zegar i odliczanie do końca świata/3.1 Projekt11-ZadanieDlaCiebie-Stoper-start.zip/index.html
+++ b/13. Projekt 11 - zegar i odliczanie do końca świata/3.1 Projekt11-ZadanieDlaCiebie-Stoper-start.zip/index.html
@@ -39,20 +39,12 @@
     <div class="time">
 
         <p>Czas od startu:</p>
-        <div>---</div>
+        <div class="show">---</div>
     </div>
-    <h1>seconds</h1>
-    <h2>milisecons</h2>
 
 
 
 
-
-
-
-    <br><br><br><br><br><br>
-    <button id="submit">submit</button>
-    <button id="testo">stop</button>
 
 
     <script src="main.js">
